scss/modules/_home.scss
/*Home*/

.banner {
  color: white;
  display: flex;
  height: 100%;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}


.hamburger__icon:before,
 .hamburger__icon:after{
  background-color: #fff
}

.main-title {
  margin: 20px;
}

.main-slogan {
  margin: 20px
}

